--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -2,7 +2,8 @@
 
 html {
     font-family: 'Bai Jamjuree', sans-serif;
-    font-size: 18px; }
+    font-size: 18px; 
+}
 
 h1,
 h2, 
@@ -15,10 +16,16 @@ h4 {
 p { 
     color: $grayish-blue;
     line-height: 1.6;
+    @media screen and (max-width: 767px) { 
+        font-size: 90%;
+    }
 }
 
-ul { list-style: none; }
+ li { list-style: none; }
 
-a { text-decoration: none; color: inherit;}
+a { 
+    text-decoration: none; 
+    color: inherit;
+}
 
 .btn { font-family: inherit; }
